syntax="proto3";

package post_service;
option go_package="genproto/post_service";
import "google/protobuf/empty.proto";
import "common.proto";

service PostService  {
    rpc Create(CreateRequest) returns (Post) {};
    rpc GetByKey(KeyRequest) returns (Post) {};
    rpc Find(Filter) returns (Posts) {};
    rpc Update(UpdateRequest) returns (Post) {};
    rpc Delete(KeyRequest) returns (google.protobuf.Empty) {};
}

message CreateRequest {
    string id = 1;
    string slug = 2;
    string title = 3;
    string body = 4;
    string owner_id = 5;
}

message UpdateRequest {
    string id = 1;
    string slug = 2;
    string title = 3;
    string body = 4;
}

message Post {
    string id = 1;
    string slug = 2;
    string title = 3;
    string body = 4;
    string owner_id = 5;
    string created_at = 6;
    string updated_at = 7;
    string deleted_at = 8;
}

message Posts {
    int32 count = 1;
    repeated Post items = 2;
}